# AndroidHALInspector

./: .gitignore  CMakeLists.txt  README.md
android/: AndroidManifest.xml
content/: Main.qml
src/: FrameProcessor.cpp  FrameProcessor.h  main.cpp
